CSS Overflow fixed

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -13,7 +13,7 @@
     right: 0;
     opacity:  0.5;
 }
-#main {
+#allsets {
     text-align: center;
 }
 /* SETS */
